<resources>
    <string name="app_name">Jio Glass</string>

    <!--Login Page-->
    <string name="hey">Hey!</string>
    <string name="sign_in_prompt">Let\'s get you signed in first</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign In</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="invalid_email">Not a valid mail ID</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="incorrect_email">Incorrect mail ID</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>